feat: add lombok support