@@ -13,8 +13,16 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.fork = true
+    options.forkOptions.jvmArgs += ["-Xmx512m", "-Dfile.encoding=UTF-8"]
+    options.forkOptions.jvmArgs += ["--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"]
 }
